@@ -7,9 +7,11 @@ if "%JAVA_HOME%" == "" goto noJavaHome
 echo WARNING!! STW(Stop-The-World) will be performed on your Java process, if this is NOT wanted, type 'Ctrl+C' to exit.
 
 
-set BASEDIR=%~dp0
-set SA_JDI_PATH=%JAVA_HOME%\lib\sa-jdi.jar
-java -XX:AutoBoxCacheMax=20000 -classpath "%BASEDIR%\vjmap.jar;%SA_JDI_PATH%" com.vip.vjtools.vjmap.VJMap %*
+set DIR=%~dp0
+set JAVA_OPTS="-Xms512m -Xmx512m -Xmn400m -XX:+TieredCompilation -XX:+UseConcMarkSweepGC -Xverify:none -XX:AutoBoxCacheMax=20000"
+
+
+"%JAVA_HOME%\bin\java" %JAVA_OPTS% -classpath "%DIR%\vjmap.jar;%JAVA_HOME%\lib\sa-jdi.jar" com.vip.vjtools.vjmap.VJMap %*
 goto end
 
 :noJavaHome
