@@ -1,24 +1,34 @@
 #!/bin/sh
 
-if [ -z "$JAVA_HOME" ]; then
-    echo "JAVA_HOME env is not set, try to find it out"
-
-	JAVA_PATH=`which java 2>/dev/null`
-	if [ "x$JAVA_PATH" != "x" ]; then
-	  JAVA_PATH=`dirname $JAVA_PATH 2>/dev/null`
-	  JAVA_HOME=`dirname $JAVA_PATH 2>/dev/null`
-	fi
+if [ -z "$JAVA_HOME" ] ; then
+	echo "JAVA_HOME env doesn't exist, try to find the location of java"
+	JAVA_HOME=`readlink -f \`which java 2>/dev/null\` 2>/dev/null | \
+	sed 's/\jre\/bin\/java//' | sed 's/\/bin\/java//'`
 fi
 
-SA_JDI_PATH=$JAVA_HOME/lib/sa-jdi.jar
+if [ ! -d "$JAVA_HOME" ] ; then
+	echo "Please set JAVA_HOME env before run this script"
+	exit 1
+fi
+
+SAJDI_PATH=$JAVA_HOME/lib/sa-jdi.jar
+
+if [ ! -f "$SAJDI_PATH" ] ; then
+	echo "$SAJDI_PATH doesn't exist !" >&2
+	exit 1
+fi
+
+TOOLS_PATH=$JAVA_HOME/lib/tools.jar
+
+if [ ! -f "$TOOLS_PATH" ] ; then
+	echo "$TOOLS_PATH doesn't exist !" >&2
+	exit 1
+fi
 
 echo -e "\033[31mWARNING!! STW(Stop-The-World) will be performed on your Java process, if this is NOT wanted, type 'Ctrl+C' to exit. \033[0m"
 
-PRGDIR=`dirname "$0"`
-BASEDIR=`cd "$PRGDIR/" >/dev/null; pwd`
+DIR=$( cd $(dirname $0) ; pwd -P )
+JAVA_OPTS="-Xms512m -Xmx512m -Xmn400m -XX:+UseConcMarkSweepGC -XX:+TieredCompilation -Xverify:none -XX:AutoBoxCacheMax=20000"
 
-if [ -f ${SA_JDI_PATH} ]; then
-   java -XX:AutoBoxCacheMax=20000 -classpath $BASEDIR/vjmap.jar:$SA_JDI_PATH com.vip.vjtools.vjmap.VJMap $*
-else
-   echo "JAVA_HOME/lib/sa-jdi.jar is not exist, please set your JAVA_HOME env";
-fi
+
+"$JAVA_HOME"/bin/java $JAVA_OPTS -classpath $DIR/vjmap.jar:$SAJDI_PATH:$TOOLS_PATH com.vip.vjtools.vjmap.VJMap $*
